Fixed blocks bottom spacing for adaptive mixin

--- a/src/blocks.less
+++ b/src/blocks.less
@@ -32,7 +32,7 @@
 		> * {
 			width: calc(percentage(1 / @num) ~" - " @spacing);
 			margin-left: @spacing;
-			margin-bottom: @line-margin;
+			margin-bottom: @spacing;
 		}
 	}
 }
